<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    tools:context=".activity1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/descriptionimage"
        app:srcCompat="@drawable/pddimg"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="574dp"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="156dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/question" />

        <Button
            android:id="@+id/button1"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/answer1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onClick"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            app:cornerRadius="0dp" />
        <Button
            android:id="@+id/button2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/answer2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onClick"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            app:cornerRadius="0dp" />
        <Button
            android:id="@+id/button3"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/answer3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onClick"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            app:cornerRadius="0dp" />
        <Button
            android:id="@+id/button4"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/answer4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="onClick"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            app:cornerRadius="0dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>