<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/green"
    tools:context=".activity3">

    <TextView
        android:id="@+id/textView5"

        android:layout_height="wrap_content"
        android:text="@string/developer"
         app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_width="140dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginRight="230dp"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="140dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        android:layout_marginTop="60dp"
        android:layout_marginRight="230dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="140dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        android:layout_marginTop="60dp"
        android:layout_marginRight="230dp" />
    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:onClick="about"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="400dp"
        android:backgroundTint="@color/grey"
        app:cornerRadius="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>